# space-rag

./: CLAUDE.md
langchain-agentic-rag/: .env.example  .gitkeep  README.md  pyproject.toml  run.sh
langchain-agentic-rag/backend/: __init__.py  agent.py  agent_tools.py  app.py  config.py  knowledge_base.py  llm_client.py  models.py  session_manager.py  vector_store.py
langchain-agentic-rag/docs/: sample_course.txt
langchain-agentic-rag/frontend/: index.html  script.js  style.css
langchain-agentic-rag/scripts/: setup.py
langchain-agentic-rag/tests/: __init__.py
starting-ragchatbot-codebase/: CLAUDE.md  pyproject.toml  query_flow_diagram.md
starting-ragchatbot-codebase/.ai-rules/: product.md  structure.md  tech.md
starting-ragchatbot-codebase/backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
starting-ragchatbot-codebase/backend/tests/: conftest.py  run_tests.py  test_ai_generator.py  test_api_endpoints.py  test_complete_system.py  test_course_search_tool.py  test_rag_integration.py  test_real_components.py  test_sequential_integration.py
starting-ragchatbot-codebase/frontend/: index.html  script.js  style.css
starting-ragchatbot-codebase/scripts/: check-format.sh  format.sh  quality-check.sh
starting-ragchatbot-codebase/specs/sequential-tool-calling/: requirements.md
